# SimpleFileWatcher

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
include/FileWatcher/: FileWatcher.h
lib/Debug/: SimpleFileWatcher.lib
lib/Release/: SimpleFileWatcher.lib
source/: CMakeLists.txt  FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherWin32.cpp
